<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bamon.basivoc.OptionsActivity">

    <TextView
        android:id="@+id/labelForLang1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstLangLabel" />

    <Spinner
        android:id="@+id/spinner_language1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/labelForLang2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondLangLabel" />

    <Spinner
        android:id="@+id/spinner_language2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/addLangText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addLang"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/newLangET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/addBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addLangClicked"
            android:text="@string/add" />
    </LinearLayout>

    <TextView
        android:text="@string/practice_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/practiceLength" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:id="@+id/practiceLengthInput" />

    <Button
        android:text="@string/clearDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clearDatabase"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <Button
        android:text="@string/accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/acceptOptions"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:onClick="acceptOptions"/>

</LinearLayout>
