<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bamon.basivoc.MenuActivity">

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textAlignment="center"
        android:id="@+id/textView" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_settings_black_24dp"
        android:id="@+id/imageButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:elevation="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="startOptionsAct"
        android:contentDescription="@string/logoDesc"/>

    <Button
        android:text="@string/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_above="@+id/imageButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="29dp"
        android:layout_alignParentEnd="true"
        android:onClick="startListAct"/>

    <Button
        android:id="@+id/editBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="startEditAct"
        android:text="@string/add" />

    <Button
        android:id="@+id/practiceBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:onClick="startPracticeAct"
        android:text="@string/practice"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@mipmap/mascot_mainmenu"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/practiceBtn"
        android:contentDescription="@string/settings"/>


</RelativeLayout>
