<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bamon.basivoc.SplashActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/greeting"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/hint"
        android:layout_below="@+id/greeting"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/lang1Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/hint"
        android:layout_marginTop="72dp" />

    <TextView
        android:id="@+id/labelForLang1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstLangLabel"
        android:layout_marginBottom="23dp"
        android:layout_above="@+id/labelForLang2"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/lang2Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelForLang2"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/labelForLang2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondLangLabel"
        android:layout_below="@+id/lang1Spinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <ImageButton
        android:id="@+id/nextBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="nextClicked"
        android:contentDescription="@string/desc_next"/>

    <TextView
        android:id="@+id/moreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You can add more languages in the options menu later on!\nClick the arrow below and start adding phrases to your vocabulary!"
        android:layout_above="@+id/nextBtn"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

</RelativeLayout>
